--- a/views/faculty-profile.ejs
+++ b/views/faculty-profile.ejs
@@ -11,7 +11,7 @@
 
         <h2 style="font-family: 'Ubuntu Mono', monospace;"> - create Faculty profile - </create></h2>
        
-        <form action="" method="">
+        <form action="/faculty-profile" method="POST">
 
           <div class="d-grid gap-3">
   
