--- a/views/facultyDetails.ejs
+++ b/views/facultyDetails.ejs
@@ -36,9 +36,7 @@
 
             <div class="d-grid gap-4">
                 
-              <a href="<%= faculty.id %>" class="btn btn-outline-success btn-sm">Edit</a>
-              <!-- <a href="" class="btn btn-outline-success btn-sm delete" data-doc="<%= student.id %>">Delete</a> -->
-
+              <a href="/updateFaculty/<%=faculty.initial_name %>" class="btn btn-outline-success btn-sm">Edit</a>
 
             </div>
             
