--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
           <label style="font-family: 'Ubuntu Mono', monospace;" class="form-check-label" for="flexSwitchCheckDefault">Student</label>
         </div>
 
-        <form>
+        <form action="" method="GET">
           <!-- Email input -->
           <div class="d-grid gap-3">
   
