--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
           <label style="font-family: 'Ubuntu Mono', monospace;" class="form-check-label" for="flexSwitchCheckDefault" name="sk">Student</label>
         </div>
 
-        <form action="" method="">
+        <form action="" method="GET">
 
           <div class="d-grid gap-3">
   
