--- a/views/thesis-group.ejs
+++ b/views/thesis-group.ejs
@@ -13,7 +13,7 @@
 
         <h2 style="font-family: 'Ubuntu Mono', monospace;"> - Form your thesis group - </create></h2>
        
-        <form action="" method="">
+        <form action="" method="GET">
 
           <div class="d-grid gap-3">
 
