--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                    
                     <div class="col-lg-5 col-md-6 no-padding">
                         <div class="login-box">
-                            <h5>e-Thesis</h5>
+                            <h5>Login</h5>
 
                             <form action="/login" method="POST" id="form">
 
@@ -46,7 +46,7 @@
                                <!-- <button class="btn btn-success  btn-sm"> Create Account</button> -->
                             </div>
                             <div class="login-row donroo row no-margin">
-                               <p>Dont have an Account ?</p> <a href="/register">Sign Up</a>
+                               <p>Dont have an Account ?</p> <a href="/register" style="color:  #2e86c1 ;">Sign Up</a>
                             </div>
                             
                             </form>
