--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,7 +47,7 @@
                                 </div>
     
                                 <div class="login-row donroo row no-margin">
-                                    <p>Already have Account ?</p> <a href="/login">Login</a>
+                                    <p>Already have Account ?</p> <a href="/login" style="color:  #2e86c1 ;">Login</a>
                                  </div>
                                  
                             </form>
