--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,12 @@
 <nav>
     <div>
-      <a href="/"><h1 style="font-family: 'Silkscreen', cursive;">e-Thesis</h1></a>
+      <a href="/index"><h1 style="font-family: 'Silkscreen', cursive;">e-Thesis</h1></a>
       <p style="font-size: 9px; font-family: 'Ubuntu Mono', monospace;"> < A platform where students and faculties collaborate > </A></p>
     </div>
     <ul>
-      <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/">Home</a></li>
-      <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/">My-Profile</a></li>
+      <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/index">Home</a></li>
+
+      <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/profile">My-Profile</a></li>
 
       <!-- <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/studentList">Student-List</a></li>
       <li style="font-family: 'Ubuntu Mono', monospace;"><a href="/facultyList">faculty-List</a></li> -->
