--- a/views/student-profile.ejs
+++ b/views/student-profile.ejs
@@ -32,7 +32,7 @@
             </div>
   
             <div >
-              <input class="form-control form-control-sm" type="email" placeholder="G-suite" aria-label=".form-control-sm example" name="email" required>
+              <input class="form-control form-control-sm" type="email" placeholder="G-suite" aria-label=".form-control-sm example" name="email" value="<%= email %>" required readonly>
   
             </div>
   
